monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4011/A4011b.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4011;

grammar A4011b {

  A astextends B, C;

}
